# scorep-xray

./: .gitattributes  .gitignore  .gitlab-ci-jsc.yml  .gitlab-ci.yml  AUTHORS  CITATION.cff  CONTRIBUTING.md  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.inc.am  Makefile.tests-mpi-omp.inc.am  Makefile.tests-mpi.inc.am  Makefile.tests-omp.inc.am  Makefile.tests-serial.inc.am  Makefile.tests-shmem.inc.am  Makefile.tests.am  NEWS  OPEN_ISSUES  README  README.md  THANKS  VERSION  beautify  beautify-common  beautify.cfg  bootstrap  common.am  config-common.h  configure.ac  encoding.c  generate-config-backend-for-frontend.sh  generate-library-dependencies-la-object.hpp  generate-library-dependencies.sh  generate-library-dependencies.sh.in  generate-library-version.sh  generate-license.sh  generate-package-version.sh  install-pre-commit.sh  (+8 more)
.gitlab/issue_templates/: bugreport.md
.gitlab/merge_request_templates/: default.md
build-backend/: .gitignore  Makefile.am  Makefile.libbfd.in  Makefile.libunwind.in  configure.ac
build-backend/build-mpi/: .gitignore  Makefile.am  configure.ac
build-config/: .#svn:externals  .gitignore  VERSION  downloads  packages.sh  process_arguments.awk
build-config/common/: .gitattributes  COPYING  Makefile-rpaths.inc.am  Makefile.tests-mpi-omp.inc.am  Makefile.tests-mpi.inc.am  Makefile.tests-serial.inc.am  Makefile.tests-shmem.inc.am  generate-library-dependencies-la-object.hpp  platforms.am  test-runner-mpi.sh
build-config/m4/: ac_cxx_have_strstream.m4  ac_dir_arg_consistent.m4  ac_silc_common_checks.m4  ac_silc_compiler_and_flags.m4  ac_silc_doxygen.m4  ac_silc_version_and_revision.m4  scorep_addr2line.m4  scorep_align.m4  scorep_allocator_alignment.m4  scorep_backend_test_runs.m4  scorep_check_preincludes.m4  scorep_check_symbols.m4  scorep_compiler_cond_and_subst.m4  scorep_compiler_constructor.m4  scorep_compiler_instrumentation.m4  scorep_compiler_instrumentation_flags.m4  scorep_computenode_compilers.m4  scorep_cppflag_iquote.m4  scorep_cray_pmi.m4  scorep_cube4.m4  scorep_cuda.m4  scorep_cxx_function_predef.m4  scorep_dlfcn.m4  scorep_enable_default.m4  scorep_error_codes.m4  scorep_estimator.m4  scorep_fortran.m4  scorep_fortran_charlen_type.m4  scorep_gcc_atomic_builtins.m4  scorep_gcc_plugin.m4  scorep_hip.m4  scorep_hmpp.m4  scorep_instrumentation_flags.m4  scorep_io_recording.m4  scorep_kokkos.m4  scorep_libbfd.m4  scorep_library_wrapping.m4  scorep_link_flags.m4  scorep_llvm_config.m4  scorep_llvm_plugin.m4  (+27 more)
build-frontend/: .gitignore  Makefile.am  configure.ac
build-gcc-plugin/: .gitignore  Makefile.am  configure.ac
build-includes/: backend-only.am  common.am  compute-node-mpi.m4  compute-node.m4  computenode.m4  front-and-backend.am  frontend-only.am  login-node.m4  loginnode.m4  mpi-backend-only.am  shmem-backend-only.am
build-libwrap/: .gitignore  Makefile.am  configure.ac
build-llvm-plugin/: .gitignore  Makefile.am  configure.ac
build-mpi/: .gitignore  Makefile.am  configure.ac
build-score/: .gitignore  Makefile.am  configure.ac
build-shmem/: .gitignore  Makefile.am  configure.ac
build-xray-plugin/: Makefile.am  configure.ac
common/beautifier/: beautify  pre-commit
common/hash/: .gitattributes
common/utils/: .gitattributes  .gitignore  COPYING
doc/: .gitignore  Makefile.inc.am  doxygen.conf  license.tex
doc/doxygen/: main_1.dox  main_3.dox  scorep_usage.dox  (+1 more)
doc/doxygen-user/: 01_introduction.dox  02_quickstart.dox  03_instrumentation.dox  04_measurement.dox  04_sampling.dox  05_measurement.dox  05_score.dox  06_example.dox  06_score.dox  07_example.dox  A1_installation.dox  A1_scorep_installation.dox  A2_mpigroups.dox  A3_metricpluginexample.dox  A4_archivecontents.dox  A4_substratepluginexample.dox  doxygen-user-component.cfg.in  doxygen-user.cfg.in  footer.html  header.html  header.tex  instrumentation.dox  main_1.dox.in  main_10.dox.in  main_2.dox.in  main_3.dox.in  main_6.dox.in  main_7.dox.in  main_8.dox.in  measurement.dox  scorep.sty  scorep_backend_info_usage.dox.in  scorep_config_usage.dox.in  scorep_info_confvars_help.md  scorep_info_ldaudit_help.md  scorep_info_usage.dox.in  scorep_score_usage.dox.in  scorep_usage.dox.in  xannex_mpigroups.dox
examples/: Makefile  hello_functions.c
hooks/: install-hooks.sh  post-commit  pre-commit
include/: SCOREP_CStr.h  SCOREP_Debug.h  SCOREP_Error.h  SCOREP_Error_Codes.h  SCOREP_IO.h  SCOREP_ParserBase.hpp  UTILS_CStr.h  UTILS_Debug.h  UTILS_DebugStream.hpp  UTILS_Error.h  UTILS_IO.h  UTILS_Portability.h  utils_package.h
m4/: ac_common_package.m4  ac_dir_arg_consistent.m4  ac_opari_common_checks.m4  ac_otf2_common_checks.m4  ac_otf2_entropy.m4  ac_scorep_backend_libs.m4  ac_scorep_backend_test_runs.m4  ac_scorep_build_mode.m4  ac_scorep_c99.m4  ac_scorep_cobi.m4  ac_scorep_common_checks.m4  ac_scorep_compiler_and_flags.m4  ac_scorep_compiler_checks.m4  ac_scorep_compiler_instrumentation.m4  ac_scorep_cube4.m4  ac_scorep_cuda.m4  ac_scorep_cupti.m4  ac_scorep_debug.m4  ac_scorep_doxygen.m4  ac_scorep_external_components.m4  ac_scorep_fortran_checks.m4  ac_scorep_generic_libs.m4  ac_scorep_git_controlled.m4  ac_scorep_libbfd.m4  ac_scorep_libsion.m4  ac_scorep_link_flags.m4  ac_scorep_linker_flags.m4  ac_scorep_metric_plugins.m4  ac_scorep_metrics.m4  ac_scorep_mpi.m4  ac_scorep_mpi_profiling.m4  ac_scorep_online_access.m4  ac_scorep_openmp.m4  ac_scorep_pdt.m4  ac_scorep_posix_functions.m4  ac_scorep_runtime_management_timings.m4  ac_scorep_sampling.m4  ac_scorep_summary.m4  ac_scorep_svn_controlled.m4  ac_scorep_sys_defaults.m4  (+60 more)
share/: .gitignore  README.spec  SCOREP_Cobi_Adapter.xml.in  SCOREP_Cobi_Filter.xml  SCOREP_Eclipse_ETFW.xml  SCOREP_Pdt_Instrumentation.conf  scorep.errors  scorep.spec.in  scorep_alt.spec  scorep_opt.spec
src/: .gitignore  Makefile.confvars.inc.am  Makefile.inc.am  config-backend-mpi.h.in  config-backend.h.in  config-custom.h  config-frontend.h.in  config.h
test/: Makefile  Makefile.inc.am  Makefile.mpi.inc.am  Makefile_pgi  hello_functions.c  scorep_monolithic_subsystems.c
tools/: .#svn:externals  preview.tar
(+2460 files in other folders)
